tests/compile_errors/003-unresolved-placeholders.buzz
| `joe` is not defined
import "lib/std";
import "tests/compile_errors/utils/bad-import";

test "Unknown string interpolated expression" {
    num hello = 12 + world;

    num by = hello + shey;

    print(by);
}

num shey = 42 + joe;